 o ftp: accept all 2xx responses to the PORT command
 o configure: allow both --with-ca-bundle and --with-ca-path [15]
 o cmake: install the dll file to the correct directory
 o nss: fix NPN/ALPN protocol negotiation
 o polarssl: fix ALPN protocol negotiation
 o cmake: Fix generation of tool_hugehelp.c on windows
 o cmake: fix winsock2 detection on windows
 o gnutls: fix build with HTTP2

This release includes the following known bugs:

 o see docs/KNOWN_BUGS (http://curl.haxx.se/docs/knownbugs.html)

This release would not have looked like this without help, code, reports and
advice from friends like these:

  Alessandro Ghedini, Alexander Peslyak, Ben Boeckel, Brad King, Brad Spencer,
  Chris Young, Dan Fandrich, Daniel Stenberg, Gisle Vanem, Guenter Knauf,
  Jean-Francois Durand, Joe Mason, John E. Malmberg, Jon Seymour, Julian Ospald,
  Kamil Dudka, Kyle J. McKay, Leith Bade, Marc Hoersken, Michael Kaufmann,
  Michael Wallner, Mohammad AlSaleh, Nick Zitzmann, Patrick Monnerat,
  Ray Satiro, Rich Burridge, Sam Schanken, Sergei Nikulov, Steve Holme,
  Tatsuhiro Tsujikawa, Thomas Klausner, Viktor Szakats, Vojtěch Král,
  Yun SangHo

        Thanks! (and sorry if I forgot to mention someone)

References to bug reports and discussions on issues:

 [1] = http://curl.haxx.se/bug/view.cgi?id=1469
 [2] = http://curl.haxx.se/bug/view.cgi?id=1468
 [3] = https://github.com/bagder/curl/pull/136
 [4] = https://github.com/bagder/curl/pull/134
 [5] = http://curl.haxx.se/mail/lib-2015-01/0036.html
 [6] = http://curl.haxx.se/mail/lib-2015-01/0065.html
 [7] = https://github.com/bagder/curl/pull/137
 [8] = http://curl.haxx.se/mail/lib-2015-01/0094.html
 [9] = http://curl.haxx.se/docs/manpage.html#--cert-status
 [10] = http://curl.haxx.se/libcurl/c/CURLOPT_SSL_VERIFYSTATUS.html
 [11] = http://curl.haxx.se/bug/view.cgi?id=1471
 [12] = http://curl.haxx.se/bug/view.cgi?id=1476
 [13] = http://curl.haxx.se/mail/lib-2015-02/0034.html
 [14] = http://curl.haxx.se/mail/lib-2015-01/0002.html